	- drop the HAVE_NCURSES configuration setting, the support for
	  changing the foreground and background color is autodeteted
	- drop the bundled termlib implementation, require termcap support
	- drop the stubs for old-style termio support, the hexer code only
	  works with termios anyway
	- drop the config.* files and autogenerate config.h
	- fix the build of the myc command-line calculator

0.2.3	2015/12/10
	- build with large file support on Linux
	- clear the line after the cursor position on exit and suspend
	- fix some more typographical errors
	  (reported by Jakub Wilk <jwilk@debian.org>)

0.2.2	2015/12/10
	- reset the terminal color attributes on exit
	  (reported by Jakub Wilk <jwilk@debian.org>)
	- also reset the attributes on suspend (Ctrl-Z) and restore
	  them on resume

0.2.1	2015/12/10
	- fix some more typographical errors
	- abort on memory allocation failures (malloc(), realloc(),
	  strdup())

0.2.0	2015/12/09
	- fix a lot of C compiler warnings
	- provide a better vasprintf() simulation to fix a display bug
	- use sigemptyset() instead of a direct assignment to sigset_t
	  (reported by Daniel Schepler <dschepler@gmail.com>)
	- remove some unused functions
	- simplify exh_save_buffer(): it's only used on the whole file
	- declare some functions as printf-like
	- handle short reads/writes and read/write errors
	- bump the year on my copyright notice
	- fix a signed/unsigned char bug when reading the swapfile
	- merge early when marking screen lines for refreshing
	  (reported by Jonathan Neuschäfer <j.neuschaefer@gmx.net>)
	- let the editor use the HE_DEFAULT_PAGER value from defs.h as
	  a last-resort fallback (nothing in the environment, etc)
	  (reported by Jakub Wilk <jwilk@debian.org>)
	- allow the default pager value to be overridden at build time
	  (reported by Jakub Wilk <jwilk@debian.org>)

0.1.8	2014/09/11
	- fix a crash when inserting or replacing a half-byte
	  Thanks, Thibaut Girka <thib@sitedethib.com>