@@ -84,14 +84,10 @@ helptext.c: help.txt bin2c
 
 config.h:
 	[ ! -e config.h.auto ] || rm config.h.auto
+	echo "/* Autogenerated by Makefile and config-test.c */" > config.h.auto
 	for item in \
-		STRCMP		\
-		STRCASECMP	\
 		SIGTYPE_INT	\
-		MEMMOVE		\
-		FLOAT_H		\
 		ALLOCA_H	\
-		STRERROR	\
 		VASPRINTF	\
 	    ; do \
 		echo "Testing for $$item"; \
@@ -101,8 +97,28 @@ config.h:
 			value=0; \
 		fi; \
 		echo "- result: $$value"; \
-		printf "#define HAVE_%s\\t%d\\n" "$$item" "$$value" >> config.h.auto; \
+		printf "\\n#define HAVE_%s\\t%d\\n" "$$item" "$$value" >> config.h.auto; \
 	done
+	
+	# These configuration settings are deprecated; hexer expects
+	# a POSIX environment that provides these functions and
+	# header files.  If the build breaks or hexer doesn't run
+	# properly, try moving some of these to the upper section so
+	# the configuration stage can actually check for them; please
+	# also let the author know what your operating system, platform,
+	# and build environment is.
+	#
+	for item in \
+		STRCMP		\
+		STRCASECMP	\
+		MEMMOVE		\
+		FLOAT_H		\
+		STRERROR	\
+	    ; do \
+		echo "Assuming $$item is present"; \
+		printf "\\n/* Assumed; please let the author know if the build breaks */\\n#define HAVE_%s\\t%d\\n" "$$item" 1 >> config.h.auto; \
+	done
+	
 	[ ! -e config.h ] || rm config.h
 	mv config.h.auto config.h
 
